[package]
name = "nested_sampling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
clap = { version = "3.0", features = ["derive"] }
bisection = "0.1.0"
ordered-float = "2.10.0"
statrs = "0.16.0"
rv = "0.14.3"

